--- a/Blockly/package.json
+++ b/Blockly/package.json
@@ -24,6 +24,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "blockly": "^11.0.0"
+    "blockly": "^11.0.0",
+    "dompurify": "^3.1.6"
   }
 }
