--- a/Blockly/package.json
+++ b/Blockly/package.json
@@ -24,7 +24,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.46.1",
     "blockly": "^11.1.1",
-    "dompurify": "^3.1.6"
+    "dompurify": "^3.1.6",
+    "html2canvas": "^1.4.1"
   }
 }
