--- a/Blockly/package.json
+++ b/Blockly/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "start": "webpack serve --open --mode development && node ./../backend/app.js"
+    "start": "webpack serve --open --mode development",
+    "serve": "node ./../app.js"
   },
   "keywords": [
     "blockly"
