--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "prisma": "^5.21.1"
+    "express": "^4.21.1"
   }
 }
