--- a/Blockly/package.json
+++ b/Blockly/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Blosite",
+  "name": "blosite",
   "version": "1.0.0",
   "description": "A sample app using Blockly",
   "main": "index.js",
