少しととのえた

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@blockly/field-colour": "^5.0.9",
     "@blockly/toolbox-search": "^2.0.9",
     "@supabase/supabase-js": "^2.46.1",
     "blockly": "^11.1.1",
